@@ -1,10 +1,11 @@
 package org.example.exchangeratewebapiproject.bussiness.management;
 
+import com.remondis.remap.Mapper;
 import lombok.AllArgsConstructor;
 import org.example.exchangeratewebapiproject.api.dto.ValuteDto;
 import org.example.exchangeratewebapiproject.api.model.Valute;
 import org.example.exchangeratewebapiproject.repository.ValuteRepository;
-import org.modelmapper.ModelMapper;
+//import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
@@ -13,22 +14,26 @@ import java.util.List;
 @AllArgsConstructor
 public class ValuteManager {
     private final ValuteRepository valuteRepository;
-    private final ValTypeManager valTypeManager;
-    private final ModelMapper modelMapper = new ModelMapper();
+//    private final ModelMapper modelMapper = new ModelMapper();
+    private final Mapper<Valute, ValuteDto> valuteEntityToValuteDtoMapper;
 
-    public ValuteDto getValuteByCode(String date,String code) {
-        List<Valute> valutes = valuteRepository.findByCodeAndValCursDate(date,code);
 
-        if(!valutes.isEmpty())
-        {
-            return modelMapper.map(valutes.get(0),ValuteDto.class);
+    public ValuteDto getValuteByCode(String date, String code) {
+        Valute valutes = valuteRepository.findByCodeAndValCursDate(date, code);
+
+        if (valutes !=null) {
+//            return modelMapper.map(valutes.getFirst(),ValuteDto.class);
+            ValuteDto map = valuteEntityToValuteDtoMapper.map(valutes);
+            map.setValTypeId(valutes.getValType().getId());
+
+            return map;
         }
-       return null;
+        return null;
     }
 
 
-    public ValuteDto setValuteByValue(double nominal,ValuteDto valuteDto) {
-        valuteDto.setNominal(Double.toString(nominal/valuteDto.getValue()));
+    public ValuteDto calculateValute(double nominal, ValuteDto valuteDto) {
+        valuteDto.setNominal(Double.toString(nominal / valuteDto.getValue()));
         valuteDto.setName(valuteDto.getName().replaceAll("\\d+", valuteDto.getNominal()));
         valuteDto.setValue(nominal);
         return valuteDto;
